sidebar overlapping fixed

--- a/orfeus/src/views/root/Root.module.css
+++ b/orfeus/src/views/root/Root.module.css
@@ -16,4 +16,5 @@
 
 .navbar {
   background-color: #0a1929 !important;
+  z-index: 10000;
 }
